# actix-booking-system

./: Cargo.toml  diesel.toml
migrations/2021-10-28-224601_create_users/: down.sql  up.sql
migrations/2021-10-28-225052_create_slots/: down.sql  up.sql
migrations/2021-10-30-180610_add_password_hash_to_user/: down.sql  up.sql
src/: main.rs  schema.patch  schema.rs  schema.rs.orig
src/api/: context.rs  mod.rs  mutation.rs  query.rs  schema.rs
src/db/: mod.rs  pool.rs  types.rs
src/db/models/: mod.rs  slot.rs  user.rs  validation.rs
src/yoyaku_web/: router.rs
