[package]
name = "yoyaku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-httpauth = "0.5"
actix-cors = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
derive_more = "0.99"
log = "0.4.0"
env_logger = "0.8.4"
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel-citext = "0.3.0"
juniper = "0.15"

